<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_menu_search"
            android:title="@string/menu_search" />
<!--        <item-->
<!--            android:id="@+id/nav_surpriseme"-->
<!--            android:icon="@drawable/ic_menu_surpriseme"-->
<!--            android:title="@string/menu_surpriseme" />-->
        <item
            android:id="@+id/nav_favourites"
            android:icon="@drawable/ic_favourite"
            android:title="@string/menu_favourites" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about" />
    </group>
</menu>