<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.home.HomeFragment">


    <ImageView
        android:id="@+id/findmykailogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:src="@drawable/mainlogo" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/tagCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_1"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tagCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_2"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tagCheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_3"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/tagCheckBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_5"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tagCheckBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_4"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/tagCheckBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_6"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/tagCheckBox7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_7"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tagCheckBox8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_8"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/tagCheckBox9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_9"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/tagCheckBox10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_10"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tagCheckBox11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_11"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/tagCheckBox12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_12"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/findmykaibutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:layout_gravity="center"
        android:layout_below="@+id/findmykailogo"/>

</LinearLayout>