<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".ui.surpriseme.SurpriseMeFragment">

    <androidx.cardview.widget.CardView
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/background"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <androidx.appcompat.widget.SearchView
            android:id="@+id/surpriseMe_searchInput"
            app:queryHint="Search your recipe..."
            app:iconifiedByDefault="false"
            app:searchIcon="@drawable/ic_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </androidx.cardview.widget.CardView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:layout_marginTop="10dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <CheckBox
                android:id="@+id/tagCheckBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_1"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tagCheckBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_2"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tagCheckBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_3"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/tagCheckBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_5"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/tagCheckBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_4"
                android:textColor="@color/white"
                android:textSize="14sp" />
            <CheckBox
                android:id="@+id/tagCheckBox6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/food_tag_6"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyler_kai_results"
        android:layout_margin="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>