<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/aqua"
    tools:context=".RecipeDetailsActivity">
    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <RelativeLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/my_kai"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_alignParentStart="true"
                android:layout_marginStart="8dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/add_to_fav"
                android:textSize="25sp"
                android:text="@string/add_to_fav"
                android:background="@drawable/ic_favourite"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:gravity="center"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView_meal_name"
                android:text="Recipe Name"
                android:textSize="20sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textView_meal_source"
                android:text="Source"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <ImageView
                android:id="@+id/imageView_meal_image"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="250dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:src="@drawable/ic_servings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/textView_servings"
                        android:textSize="14sp"
                        android:padding="8dp"
                        android:text="2 Persons"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <ImageView
                        android:src="@drawable/ic_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:id="@+id/textView_time"
                        android:textSize="14sp"
                        android:padding="8dp"
                        android:text="10 minutes"
                        android:textColor="@color/black"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>

            </LinearLayout>
            <TextView
                android:id="@+id/textView_meal_ingredients"
                android:text="Ingredients"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textView_list_ingredients"
                android:text="- 2 cups Flour"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textView_meal_summary_title"
                android:text="Instructions"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textView_meal_summary"
                android:text="How to cook"
                android:textColor="@color/white"
                android:textStyle="normal"
                android:padding="8dp"
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/cook_it"
                android:text="@string/go_to_url"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/recycler_meal_ingredients"-->
<!--                android:layout_margin="8dp"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"/>-->

        </LinearLayout>
    </ScrollView>




</LinearLayout>